--- a/templates/etc/docker/daemon.json.j2
+++ b/templates/etc/docker/daemon.json.j2
@@ -1,7 +1,7 @@
 {
 	"disable-legacy-registry": true,
 	{#"default-ulimits": {},#}
-	"dns": [ "8.8.8.8", "8.8.4.4" ],
+	{#"dns": [ "8.8.8.8", "8.8.4.4" ],#}
 	"icc": false,
 	"live-restore": true,
 	"log-level": "info",
